--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 author:
   name             : "Vishaal Munusamy Kabilan"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
+  bio              : "Independent Researcher"
   location         : "Manchester, Connecticut"
   email            :
   uri              :
