--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Blog"
-    /archive/
-  - title: "Projects"
-    /projects/
-  - title: "Papers"
-    /papers/
-  - title: "GitHub"
-    url: https://github.com/VishaalMK
-  - title: "Resume"
-    url: /sitemap/
+  # - title: "Blog"
+  #  /archive/
+  #- title: "Projects"
+  #  /projects/
+  #- title: "Papers"
+  #  /papers/
+  #- title: "GitHub"
+  #  url: https://github.com/VishaalMK
+  #- title: "Resume"
+  #  url: /sitemap/
