--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Into the Unknown"
+title                    : "Vishaal Munusamy Kabilan"
 title_separator          : "|"
 name                     : "Vishaal Munusamy Kabilan"
 description              : ""
