--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 # List of and information about my publications
 
 - title: "VectorDefense: Vectorization as a Defense to Adversarial Examples"
-  authors: Vishaal Munusamy Kabialn, Brandon L. Morris, Anh Nguyen
+  authors: Vishaal Munusamy Kabilan, Brandon L. Morris, Anh Nguyen
   description: Training deep neural networks on images represented as grids of pixels has brought to light an interesting phenomenon known as adversarial examples. Inspired by how humans reconstruct abstract concepts, we attempt to codify the input bitmap image into a set of compact, interpretable elements to avoid beign fooled by the adversarial structures.
   url: https://arxiv.org/abs/1804.08529
   year: 2018
