--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,11 +6,13 @@
   url: https://docs.google.com/document/d/1do35A7BrVKh9_z1jmwa8ijReSuO4hMGLGUMeshR38lY/edit?usp=sharing
   year: "Fall 2017"
   venue: Dr. Anh Nguyen Lab 
+  code: https://github.com/VishaalMK
   description: "Developing a model-agnostic framework to purify adversarial examples"
 - title: "Effects of Random Weights in Deep Architectures"
   authors: Vishaal Munusamy Kabilan
   url: https://docs.google.com/document/d/1aB84TNnqIferAaw2JsLEp2fTc1ilPJdweg3Q_5Jmr0U/edit?usp=sharing
   year: 2017
   venue: WPI
+  code: https://github.com/VishaalMK
   description: "Testing effects of random layers in AlexNet"
 
