--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,6 +13,6 @@
   url: https://docs.google.com/document/d/1aB84TNnqIferAaw2JsLEp2fTc1ilPJdweg3Q_5Jmr0U/edit?usp=sharing
   year: 2017
   venue: WPI
-  code: https://github.com/VishaalMK
+  code: https://github.com/VishaalMK/random_filters
   description: "Testing effects of random layers in AlexNet"
 
