--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 # List of and information about my projects
 
 
-- title: "Leveraging Generative Models to Purify Adversarial Examples"
+- title: "Harnessing Generative Models to Purify Adversarial Examples on ImageNet"
   authors: Vishaal Munusamy Kabilan
   url: https://docs.google.com/document/d/1do35A7BrVKh9_z1jmwa8ijReSuO4hMGLGUMeshR38lY/edit?usp=sharing
   year: "| Fall 2017"
