--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,7 +7,7 @@
   year: "| Fall 2017"
   venue: Dr. Anh Nguyen Lab
   code: https://github.com/VishaalMK/gen_AX
-  description: "Towards a model- and attack-agnostic adversarial defense framework. The effectiveness of multiple state-of-the-art generative models is compared."
+  description: "Towards a model- and attack-agnostic adversarial defense framework. The performances of multiple state-of-the-art generative models are compared."
 - title: "Effects of Random Weights in Deep Architectures"
   authors: Vishaal Munusamy Kabilan
   url: https://docs.google.com/document/d/1aB84TNnqIferAaw2JsLEp2fTc1ilPJdweg3Q_5Jmr0U/edit?usp=sharing
