--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,7 @@ main:
     url: /papers/
   - title: "GitHub"
     url: https://github.com/VishaalMK
-  #- title: "Resume"
-  #  url: /sitemap/
+  - title: "Resume"
+    url: https://drive.google.com/file/d/16TjQnNAX4ywd1MimjsBWQW_vBapiYvH5/view?usp=sharing
+  - title: "Twitter"
+    url: https://twitter.com/MK_Vishaal
