--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
   description: "Towards a model- and attack-agnostic adversarial defense framework. The performances of multiple state-of-the-art generative models are compared."
 - title: "Effects of Random Weights in Deep Architectures"
   authors: Vishaal Munusamy Kabilan
-  url: 
+  url: https://github.com/VishaalMK/random_filters
   year: "| Summer 2017"
   venue: WPI
   code: https://github.com/VishaalMK/random_filters
